--- a/css/output.css
+++ b/css/output.css
@@ -738,6 +738,18 @@ html {
   margin-bottom: 2rem;
 }
 
+.mr-4 {
+  margin-right: 1rem;
+}
+
+.mb-11 {
+  margin-bottom: 2.75rem;
+}
+
+.mb-9 {
+  margin-bottom: 2.25rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -914,6 +926,10 @@ html {
   justify-content: space-around;
 }
 
+.gap-5 {
+  gap: 1.25rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -972,8 +988,18 @@ html {
   background-color: rgb(10 10 10 / var(--tw-bg-opacity));
 }
 
+.bg-lightgreen {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 229 2 / var(--tw-bg-opacity));
+}
+
 .bg-none {
   background-image: none;
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .p-0 {
@@ -1018,6 +1044,11 @@ html {
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .pt-7 {
@@ -1070,6 +1101,18 @@ html {
 
 .pb-7 {
   padding-bottom: 1.75rem;
+}
+
+.pt-0 {
+  padding-top: 0px;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.pb-14 {
+  padding-bottom: 3.5rem;
 }
 
 .text-left {
