--- a/css/output.css
+++ b/css/output.css
@@ -750,6 +750,10 @@ html {
   margin-bottom: 2.25rem;
 }
 
+.mr-\[14px\] {
+  margin-right: 14px;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -784,6 +788,11 @@ html {
 
 .h-\[595px\] {
   height: 595px;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 .w-\[280px\] {
@@ -1115,6 +1124,18 @@ html {
   padding-bottom: 3.5rem;
 }
 
+.pb-16 {
+  padding-bottom: 4rem;
+}
+
+.pb-\[77px\] {
+  padding-bottom: 77px;
+}
+
+.pb-\[92px\] {
+  padding-bottom: 92px;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1222,6 +1243,10 @@ html {
 
 .leading-\[31px\] {
   line-height: 31px;
+}
+
+.leading-\[18px\] {
+  line-height: 18px;
 }
 
 .text-white {
