--- a/css/spraying.css
+++ b/css/spraying.css
@@ -84,10 +84,50 @@
 
 
 /* Plus Section */
+.plus-item:hover {
+    transform: scale(0.9);
+    transition: .5s;
+    -webkit-box-shadow: 4px 4px 8px 2px rgba(26, 255, 0, 0.2);
+    -moz-box-shadow: 4px 4px 8px 2px rgba(26, 255, 0, 0.2);
+    box-shadow: 4px 4px 8px 2px rgba(26, 255, 0, 0.2);
+}
+
+/* Plus Swiper */
+.swiper.plusSwiper {
+    width: 58%;
+    height: 570px;
+    display: block;
+}
+
+.swiper-slide {
+    font-size: 18px;
+    background: rgba(255, 255, 255, 0);
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+}
+
+
 
 
 
 /* All Media Query */
+
+@media only screen and (max-width: 1250px) {
+    .main-sprayer {
+        background-image: url(../img/spraying/spraying-bg.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+        top: -10px;
+        padding: 136px 21px 67px;
+        z-index: 1;
+        position: relative;
+    }
+}
 
 @media only screen and (max-width: 990px) {}
 
