--- a/css/spraying.css
+++ b/css/spraying.css
@@ -94,22 +94,38 @@
 
 /* Plus Swiper */
 .swiper.plusSwiper {
-    width: 58%;
-    height: 570px;
-    display: block;
+    width: 100%;
+    height: auto;
+    display: none;
+    margin: 0;
 }
 
-.swiper-slide {
-    font-size: 18px;
-    background: rgba(255, 255, 255, 0);
-
+.swiper.plusSwiper .swiper-slide {
+    max-width: 70%;
+    text-align: left;
     /* Center slide text vertically */
     display: -webkit-box;
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    flex-direction: column;
+    justify-content: start;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: start;
+    background: #000000;
+    -webkit-box-shadow: 4px 4px 8px 2px rgba(26, 255, 0, 0.2);
+    -moz-box-shadow: 4px 4px 8px 2px rgba(26, 255, 0, 0.2);
+    box-shadow: 4px 4px 8px 2px rgba(26, 255, 0, 0.2);
 }
 
+.swiper.plusSwiper .swiper-pagination {
+    margin-top: 20px;
+}
 
 
 
@@ -129,7 +145,11 @@
     }
 }
 
-@media only screen and (max-width: 990px) {}
+@media only screen and (max-width: 990px) {
+    .swiper.plusSwiper {
+        display: block;
+    }
+}
 
 @media only screen and (max-width: 768px) {
     .supp-bg::before {
@@ -143,8 +163,17 @@
     .primary-title.support {
         margin: 0;
     }
+
+    .swiper.plusSwiper .swiper-slide {
+        max-width: 98%;
+    }
 }
 
 @media only screen and (max-width: 500px) {}
 
-@media only screen and (max-width: 420px) {}
+@media only screen and (max-width: 420px) {
+    .sprayer-text {
+        height: 137px;
+        margin-top: 66px;
+    }
+}
