--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    transition: ease-in-out;
 }
 
 html {
@@ -609,7 +610,7 @@ body {
     transform: scale(0.95);
     -webkit-box-shadow: 4px 4px 8px 2px rgba(26, 255, 0, 0.2);
     -moz-box-shadow: 4px 4px 8px 2px rgba(26, 255, 0, 0.2);
-box-shadow: 10px 7px 9px 0px rgb(26 255 0 / 30%);
+    box-shadow: 10px 7px 9px 0px rgb(26 255 0 / 30%);
 }
 
 
