male a responsive drobline section

--- a/css/output.css
+++ b/css/output.css
@@ -755,10 +755,6 @@ html {
   margin-right: 14px;
 }
 
-.ml-24 {
-  margin-left: 6rem;
-}
-
 .ml-7 {
   margin-left: 1.75rem;
 }
@@ -915,10 +911,6 @@ html {
 
 .basis-\[60\%\] {
   flex-basis: 60%;
-}
-
-.basis-1\/2 {
-  flex-basis: 50%;
 }
 
 .cursor-pointer {
@@ -1772,6 +1764,18 @@ html {
     margin-top: 0px;
   }
 
+  .ss\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
+  .ss\:mb-6 {
+    margin-bottom: 1.5rem;
+  }
+
+  .ss\:mb-1 {
+    margin-bottom: 0.25rem;
+  }
+
   .ss\:block {
     display: block;
   }
@@ -1819,6 +1823,11 @@ html {
     padding-right: 5rem;
   }
 
+  .ss\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
   .ss\:pt-24 {
     padding-top: 6rem;
   }
@@ -1833,6 +1842,14 @@ html {
 
   .ss\:pt-\[340px\] {
     padding-top: 340px;
+  }
+
+  .ss\:pt-6 {
+    padding-top: 1.5rem;
+  }
+
+  .ss\:pb-8 {
+    padding-bottom: 2rem;
   }
 
   .ss\:text-base {
@@ -1853,6 +1870,10 @@ html {
   .ss\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .ss\:text-\[26px\] {
+    font-size: 26px;
   }
 
   .ss\:leading-\[27px\] {
