--- a/css/output.css
+++ b/css/output.css
@@ -551,6 +551,11 @@ html {
   margin-bottom: 2rem;
 }
 
+.my-12 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -569,11 +574,6 @@ html {
 .mx-6 {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
-}
-
-.my-12 {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
 }
 
 .my-10 {
@@ -619,24 +619,40 @@ html {
   margin-top: 2.5rem;
 }
 
-.mt-16 {
-  margin-top: 4rem;
+.mt-36 {
+  margin-top: 9rem;
+}
+
+.mr-6 {
+  margin-right: 1.5rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mb-20 {
+  margin-bottom: 5rem;
 }
 
 .mb-4 {
   margin-bottom: 1rem;
 }
 
-.mr-3 {
-  margin-right: 0.75rem;
+.mt-11 {
+  margin-top: 2.75rem;
 }
 
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
-.mt-6 {
-  margin-top: 1.5rem;
+.mr-20 {
+  margin-right: 5rem;
 }
 
 .mt-\[150px\] {
@@ -655,6 +671,18 @@ html {
   margin-top: 1.25rem;
 }
 
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.mr-3 {
+  margin-right: 0.75rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -669,18 +697,6 @@ html {
 
 .ml-4 {
   margin-left: 1rem;
-}
-
-.mt-36 {
-  margin-top: 9rem;
-}
-
-.mr-6 {
-  margin-right: 1.5rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
 }
 
 .mt-8 {
@@ -713,22 +729,6 @@ html {
 
 .mb-\[70px\] {
   margin-bottom: 70px;
-}
-
-.mt-11 {
-  margin-top: 2.75rem;
-}
-
-.mr-20 {
-  margin-right: 5rem;
-}
-
-.mt-20 {
-  margin-top: 5rem;
-}
-
-.mb-20 {
-  margin-bottom: 5rem;
 }
 
 .mt-3 {
@@ -837,6 +837,10 @@ html {
   max-width: 100%;
 }
 
+.max-w-\[670px\] {
+  max-width: 670px;
+}
+
 .max-w-\[480px\] {
   max-width: 480px;
 }
@@ -845,12 +849,12 @@ html {
   max-width: 460px;
 }
 
-.max-w-\[720px\] {
-  max-width: 720px;
-}
-
 .max-w-\[534px\] {
   max-width: 534px;
+}
+
+.max-w-\[720px\] {
+  max-width: 720px;
 }
 
 .max-w-\[320px\] {
@@ -867,10 +871,6 @@ html {
 
 .max-w-\[450px\] {
   max-width: 450px;
-}
-
-.max-w-\[670px\] {
-  max-width: 670px;
 }
 
 .max-w-\[310px\] {
@@ -893,16 +893,16 @@ html {
   flex-grow: 1;
 }
 
+.basis-\[31\%\] {
+  flex-basis: 31%;
+}
+
 .basis-\[33\%\] {
   flex-basis: 33%;
 }
 
 .basis-1\/3 {
   flex-basis: 33.333333%;
-}
-
-.basis-\[31\%\] {
-  flex-basis: 31%;
 }
 
 .basis-\[30\%\] {
@@ -1047,6 +1047,21 @@ html {
   padding-bottom: 0.5rem;
 }
 
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -1070,21 +1085,6 @@ html {
 .px-14 {
   padding-left: 3.5rem;
   padding-right: 3.5rem;
-}
-
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 .px-6 {
@@ -1117,6 +1117,10 @@ html {
   padding-top: 7rem;
 }
 
+.pb-7 {
+  padding-bottom: 1.75rem;
+}
+
 .pl-4 {
   padding-left: 1rem;
 }
@@ -1143,10 +1147,6 @@ html {
 
 .pb-5 {
   padding-bottom: 1.25rem;
-}
-
-.pb-7 {
-  padding-bottom: 1.75rem;
 }
 
 .pt-0 {
@@ -1183,13 +1183,18 @@ html {
   line-height: 1;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .text-lg {
   font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
@@ -1205,11 +1210,6 @@ html {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
 }
 
 .text-3xl {
@@ -1238,16 +1238,16 @@ html {
   line-height: 2.5rem;
 }
 
-.leading-7 {
-  line-height: 1.75rem;
-}
-
-.leading-6 {
-  line-height: 1.5rem;
-}
-
 .leading-8 {
   line-height: 2rem;
+}
+
+.leading-\[22px\] {
+  line-height: 22px;
+}
+
+.leading-9 {
+  line-height: 2.25rem;
 }
 
 .leading-\[16px\] {
@@ -1262,16 +1262,16 @@ html {
   line-height: 1.25rem;
 }
 
-.leading-9 {
-  line-height: 2.25rem;
+.leading-7 {
+  line-height: 1.75rem;
+}
+
+.leading-6 {
+  line-height: 1.5rem;
 }
 
 .leading-\[54px\] {
   line-height: 54px;
-}
-
-.leading-\[22px\] {
-  line-height: 22px;
 }
 
 .leading-\[31px\] {
@@ -1380,8 +1380,22 @@ html {
     line-height: 1;
   }
 
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .lg\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
   .lg\:leading-5 {
     line-height: 1.25rem;
+  }
+
+  .lg\:leading-4 {
+    line-height: 1rem;
   }
 }
 
@@ -1390,12 +1404,12 @@ html {
     position: relative;
   }
 
-  .md\:top-8 {
-    top: 2rem;
-  }
-
   .md\:bottom-\[50px\] {
     bottom: 50px;
+  }
+
+  .md\:top-8 {
+    top: 2rem;
   }
 
   .md\:my-12 {
@@ -1444,6 +1458,22 @@ html {
     margin-top: 1.5rem;
   }
 
+  .md\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
+  .md\:mt-12 {
+    margin-top: 3rem;
+  }
+
+  .md\:mb-12 {
+    margin-bottom: 3rem;
+  }
+
+  .md\:mb-3 {
+    margin-bottom: 0.75rem;
+  }
+
   .md\:mt-9 {
     margin-top: 2.25rem;
   }
@@ -1452,20 +1482,12 @@ html {
     margin-left: 30px;
   }
 
-  .md\:mb-3 {
-    margin-bottom: 0.75rem;
-  }
-
   .md\:mt-\[219px\] {
     margin-top: 219px;
   }
 
   .md\:mt-\[auto\] {
     margin-top: auto;
-  }
-
-  .md\:mt-2 {
-    margin-top: 0.5rem;
   }
 
   .md\:mt-16 {
@@ -1478,14 +1500,6 @@ html {
 
   .md\:mb-7 {
     margin-bottom: 1.75rem;
-  }
-
-  .md\:mb-12 {
-    margin-bottom: 3rem;
-  }
-
-  .md\:mt-12 {
-    margin-top: 3rem;
   }
 
   .md\:mt-5 {
@@ -1561,6 +1575,11 @@ html {
     padding-right: 30px;
   }
 
+  .md\:px-7 {
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
+  }
+
   .md\:px-\[21px\] {
     padding-left: 21px;
     padding-right: 21px;
@@ -1586,17 +1605,24 @@ html {
     padding-right: 3rem;
   }
 
-  .md\:px-7 {
-    padding-left: 1.75rem;
-    padding-right: 1.75rem;
-  }
-
   .md\:pb-8 {
     padding-bottom: 2rem;
   }
 
   .md\:pt-28 {
     padding-top: 7rem;
+  }
+
+  .md\:pb-0 {
+    padding-bottom: 0px;
+  }
+
+  .md\:pt-0 {
+    padding-top: 0px;
+  }
+
+  .md\:pt-\[640px\] {
+    padding-top: 640px;
   }
 
   .md\:pt-\[5px\] {
@@ -1615,18 +1641,6 @@ html {
     padding-top: 72px;
   }
 
-  .md\:pt-\[640px\] {
-    padding-top: 640px;
-  }
-
-  .md\:pb-0 {
-    padding-bottom: 0px;
-  }
-
-  .md\:pt-0 {
-    padding-top: 0px;
-  }
-
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
@@ -1642,14 +1656,14 @@ html {
     line-height: 1.75rem;
   }
 
-  .md\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 
   .md\:text-4xl {
@@ -1661,6 +1675,10 @@ html {
     line-height: 2rem;
   }
 
+  .md\:leading-6 {
+    line-height: 1.5rem;
+  }
+
   .md\:leading-\[18px\] {
     line-height: 18px;
   }
@@ -1670,10 +1688,6 @@ html {
   }
 
   .md\:leading-\[1\.5rem\] {
-    line-height: 1.5rem;
-  }
-
-  .md\:leading-6 {
     line-height: 1.5rem;
   }
 
@@ -1700,20 +1714,8 @@ html {
     margin-left: 1.25rem;
   }
 
-  .ss\:mt-1 {
-    margin-top: 0.25rem;
-  }
-
-  .ss\:mb-7 {
-    margin-bottom: 1.75rem;
-  }
-
-  .ss\:mb-0 {
-    margin-bottom: 0px;
-  }
-
-  .ss\:mt-0 {
-    margin-top: 0px;
+  .ss\:mr-8 {
+    margin-right: 2rem;
   }
 
   .ss\:mt-\[50px\] {
@@ -1764,8 +1766,16 @@ html {
     margin-bottom: 2rem;
   }
 
-  .ss\:mr-8 {
-    margin-right: 2rem;
+  .ss\:mt-1 {
+    margin-top: 0.25rem;
+  }
+
+  .ss\:mb-7 {
+    margin-bottom: 1.75rem;
+  }
+
+  .ss\:mt-0 {
+    margin-top: 0px;
   }
 
   .ss\:mt-6 {
@@ -1792,28 +1802,12 @@ html {
     display: none;
   }
 
-  .ss\:h-6 {
-    height: 1.5rem;
-  }
-
   .ss\:h-\[106px\] {
     height: 106px;
   }
 
-  .ss\:w-6 {
-    width: 1.5rem;
-  }
-
   .ss\:w-28 {
     width: 7rem;
-  }
-
-  .ss\:max-w-\[374px\] {
-    max-width: 374px;
-  }
-
-  .ss\:basis-\[44\%\] {
-    flex-basis: 44%;
   }
 
   .ss\:flex-col {
@@ -1852,6 +1846,10 @@ html {
     padding-top: 6rem;
   }
 
+  .ss\:pt-\[340px\] {
+    padding-top: 340px;
+  }
+
   .ss\:pr-28 {
     padding-right: 7rem;
   }
@@ -1860,20 +1858,12 @@ html {
     padding-top: 10px;
   }
 
-  .ss\:pt-\[340px\] {
-    padding-top: 340px;
-  }
-
   .ss\:pt-6 {
     padding-top: 1.5rem;
   }
 
   .ss\:pb-8 {
     padding-bottom: 2rem;
-  }
-
-  .ss\:text-\[14px\] {
-    font-size: 14px;
   }
 
   .ss\:text-base {
@@ -1962,8 +1952,28 @@ html {
     margin-top: 1.25rem;
   }
 
+  .sm\:mt-20 {
+    margin-top: 5rem;
+  }
+
   .sm\:mt-8 {
     margin-top: 2rem;
+  }
+
+  .sm\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .sm\:mb-\[1\.05rem\] {
+    margin-bottom: 1.05rem;
+  }
+
+  .sm\:mr-4 {
+    margin-right: 1rem;
+  }
+
+  .sm\:mr-0 {
+    margin-right: 0px;
   }
 
   .sm\:ml-0 {
@@ -1972,10 +1982,6 @@ html {
 
   .sm\:mb-3 {
     margin-bottom: 0.75rem;
-  }
-
-  .sm\:mt-20 {
-    margin-top: 5rem;
   }
 
   .sm\:mt-12 {
@@ -2004,22 +2010,6 @@ html {
 
   .sm\:mb-\[30px\] {
     margin-bottom: 30px;
-  }
-
-  .sm\:mr-4 {
-    margin-right: 1rem;
-  }
-
-  .sm\:mr-0 {
-    margin-right: 0px;
-  }
-
-  .sm\:mb-4 {
-    margin-bottom: 1rem;
-  }
-
-  .sm\:mb-\[1\.05rem\] {
-    margin-bottom: 1.05rem;
   }
 
   .sm\:h-\[30px\] {
@@ -2052,10 +2042,6 @@ html {
 
   .sm\:max-w-\[218px\] {
     max-width: 218px;
-  }
-
-  .sm\:basis-\[88\%\] {
-    flex-basis: 88%;
   }
 
   .sm\:basis-\[48\%\] {
@@ -2102,12 +2088,12 @@ html {
     padding-top: 5rem;
   }
 
-  .sm\:pt-60 {
-    padding-top: 15rem;
-  }
-
   .sm\:pt-\[360px\] {
     padding-top: 360px;
+  }
+
+  .sm\:pt-60 {
+    padding-top: 15rem;
   }
 
   .sm\:pt-0 {
@@ -2135,17 +2121,9 @@ html {
     font-size: 28px;
   }
 
-  .sm\:text-xl {
-    font-size: 1.25rem;
+  .sm\:text-lg {
+    font-size: 1.125rem;
     line-height: 1.75rem;
-  }
-
-  .sm\:text-\[17px\] {
-    font-size: 17px;
-  }
-
-  .sm\:text-\[13px\] {
-    font-size: 13px;
   }
 
   .sm\:text-sm {
@@ -2153,9 +2131,17 @@ html {
     line-height: 1.25rem;
   }
 
-  .sm\:text-lg {
-    font-size: 1.125rem;
+  .sm\:text-\[17px\] {
+    font-size: 17px;
+  }
+
+  .sm\:text-xl {
+    font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .sm\:text-\[13px\] {
+    font-size: 13px;
   }
 
   .sm\:text-2xl {
@@ -2171,16 +2157,8 @@ html {
     line-height: 1rem;
   }
 
-  .sm\:leading-6 {
-    line-height: 1.5rem;
-  }
-
   .sm\:leading-\[14px\] {
     line-height: 14px;
-  }
-
-  .sm\:leading-\[0\.5rem\] {
-    line-height: 0.5rem;
   }
 
   .sm\:leading-5 {
@@ -2189,6 +2167,14 @@ html {
 
   .sm\:leading-\[27px\] {
     line-height: 27px;
+  }
+
+  .sm\:leading-6 {
+    line-height: 1.5rem;
+  }
+
+  .sm\:leading-\[0\.5rem\] {
+    line-height: 0.5rem;
   }
 
   .sm\:leading-\[18px\] {
