--- a/css/output.css
+++ b/css/output.css
@@ -538,6 +538,10 @@ html {
   bottom: 90px;
 }
 
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -551,11 +555,6 @@ html {
   margin-bottom: 2.5rem;
 }
 
-.my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
 .my-5 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
@@ -564,6 +563,16 @@ html {
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
+}
+
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.my-28 {
+  margin-top: 7rem;
+  margin-bottom: 7rem;
 }
 
 .my-\[90px\] {
@@ -648,8 +657,12 @@ html {
   margin-bottom: 5rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mt-0 {
+  margin-top: 0px;
 }
 
 .mt-11 {
@@ -676,20 +689,32 @@ html {
   margin-top: 1.25rem;
 }
 
-.mt-16 {
-  margin-top: 4rem;
+.mt-40 {
+  margin-top: 10rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .mr-3 {
   margin-right: 0.75rem;
 }
 
-.mb-10 {
-  margin-bottom: 2.5rem;
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
+.-mt-9 {
+  margin-top: -2.25rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .ml-2 {
@@ -768,8 +793,12 @@ html {
   margin-top: 3.5rem;
 }
 
-.mt-0 {
-  margin-top: 0px;
+.ml-3 {
+  margin-left: 0.75rem;
+}
+
+.ml-8 {
+  margin-left: 2rem;
 }
 
 .box-border {
@@ -794,6 +823,10 @@ html {
 
 .h-\[1px\] {
   height: 1px;
+}
+
+.h-\[0\.75px\] {
+  height: 0.75px;
 }
 
 .h-auto {
@@ -823,6 +856,10 @@ html {
 
 .w-full {
   width: 100%;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .w-\[90\%\] {
@@ -894,6 +931,14 @@ html {
   max-width: 600px;
 }
 
+.max-w-\[200px\] {
+  max-width: 200px;
+}
+
+.max-w-\[214px\] {
+  max-width: 214px;
+}
+
 .flex-auto {
   flex: 1 1 auto;
 }
@@ -902,8 +947,8 @@ html {
   flex-grow: 1;
 }
 
-.basis-\[20\%\] {
-  flex-basis: 20%;
+.basis-\[30\%\] {
+  flex-basis: 30%;
 }
 
 .basis-\[33\%\] {
@@ -916,10 +961,6 @@ html {
 
 .basis-\[31\%\] {
   flex-basis: 31%;
-}
-
-.basis-\[30\%\] {
-  flex-basis: 30%;
 }
 
 .basis-\[60\%\] {
@@ -940,6 +981,10 @@ html {
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.items-end {
+  align-items: flex-end;
 }
 
 .items-center {
@@ -966,16 +1011,16 @@ html {
   justify-content: space-around;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
 .gap-5 {
   gap: 1.25rem;
 }
 
 .gap-32 {
   gap: 8rem;
-}
-
-.gap-4 {
-  gap: 1rem;
 }
 
 .overflow-hidden {
@@ -1029,6 +1074,11 @@ html {
 .bg-bgfooter {
   --tw-bg-opacity: 1;
   background-color: rgb(10 10 10 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#464646\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(70 70 70 / var(--tw-bg-opacity));
 }
 
 .bg-bgflex {
@@ -1134,10 +1184,6 @@ html {
   padding-top: 7rem;
 }
 
-.pb-7 {
-  padding-bottom: 1.75rem;
-}
-
 .pl-4 {
   padding-left: 1rem;
 }
@@ -1154,6 +1200,10 @@ html {
   padding-bottom: 18px;
 }
 
+.pt-8 {
+  padding-top: 2rem;
+}
+
 .pr-\[260px\] {
   padding-right: 260px;
 }
@@ -1164,6 +1214,10 @@ html {
 
 .pb-5 {
   padding-bottom: 1.25rem;
+}
+
+.pb-7 {
+  padding-bottom: 1.75rem;
 }
 
 .pt-0 {
@@ -1190,10 +1244,6 @@ html {
   text-align: left;
 }
 
-.text-center {
-  text-align: center;
-}
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1214,14 +1264,14 @@ html {
   line-height: 1.75rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-\[22px\] {
@@ -1391,6 +1441,11 @@ html {
     max-width: 455px;
   }
 
+  .lg\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
   .lg\:pt-24 {
     padding-top: 6rem;
   }
@@ -1505,6 +1560,10 @@ html {
 
   .md\:mb-3 {
     margin-bottom: 0.75rem;
+  }
+
+  .md\:mt-24 {
+    margin-top: 6rem;
   }
 
   .md\:mt-9 {
@@ -1662,6 +1721,10 @@ html {
     padding-bottom: 0.5rem;
   }
 
+  .md\:pt-24 {
+    padding-top: 6rem;
+  }
+
   .md\:pt-28 {
     padding-top: 7rem;
   }
@@ -1739,6 +1802,11 @@ html {
     margin-right: 0px;
   }
 
+  .ss\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .ss\:ml-4 {
     margin-left: 1rem;
   }
@@ -1799,12 +1867,16 @@ html {
     margin-bottom: 2rem;
   }
 
-  .ss\:mt-1 {
-    margin-top: 0.25rem;
+  .ss\:mt-\[100px\] {
+    margin-top: 100px;
   }
 
   .ss\:mb-7 {
     margin-bottom: 1.75rem;
+  }
+
+  .ss\:mt-1 {
+    margin-top: 0.25rem;
   }
 
   .ss\:mt-0 {
@@ -1841,6 +1913,10 @@ html {
 
   .ss\:w-28 {
     width: 7rem;
+  }
+
+  .ss\:basis-\[48\%\] {
+    flex-basis: 48%;
   }
 
   .ss\:flex-col {
@@ -1889,6 +1965,10 @@ html {
 
   .ss\:pt-\[10px\] {
     padding-top: 10px;
+  }
+
+  .ss\:pt-20 {
+    padding-top: 5rem;
   }
 
   .ss\:pt-24 {
@@ -2001,14 +2081,6 @@ html {
     margin-left: 0px;
   }
 
-  .sm\:mb-4 {
-    margin-bottom: 1rem;
-  }
-
-  .sm\:mb-\[1\.05rem\] {
-    margin-bottom: 1.05rem;
-  }
-
   .sm\:mr-4 {
     margin-right: 1rem;
   }
@@ -2047,6 +2119,14 @@ html {
 
   .sm\:mb-\[30px\] {
     margin-bottom: 30px;
+  }
+
+  .sm\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .sm\:mb-\[1\.05rem\] {
+    margin-bottom: 1.05rem;
   }
 
   .sm\:h-\[30px\] {
@@ -2198,10 +2278,6 @@ html {
     line-height: 14px;
   }
 
-  .sm\:leading-5 {
-    line-height: 1.25rem;
-  }
-
   .sm\:leading-\[27px\] {
     line-height: 27px;
   }
@@ -2212,6 +2288,10 @@ html {
 
   .sm\:leading-\[0\.5rem\] {
     line-height: 0.5rem;
+  }
+
+  .sm\:leading-5 {
+    line-height: 1.25rem;
   }
 
   .sm\:leading-\[18px\] {
