--- a/css/catalog.css
+++ b/css/catalog.css
@@ -31,12 +31,93 @@
     transform: scale(1.07);
 }
 
+.category-item-menu h6 {
+    transition: all 0.6s;
+}
+
+.category-item.hideMenu>.sub-menu {
+    display: none;
+    transition: all 0.6s;
+}
+
+.category-item.showMenu>.sub-menu {
+    display: block;
+    transition: all 0.6s;
+}
+
+.category-item.showMenu>.category-item-menu .vector {
+    transform: rotate(540deg);
+    transition: all 0.6s;
+    stroke: #02E502;
+}
+
+.category-item.hideMenu>.category-item-menu .vector {
+    transform: rotate(0deg);
+    transition: all 0.6s;
+}
+
+.vector {
+    viewport-fit: 10px;
+}
 
 
 
+.drone-items {
+    position: relative;
+    width: 330px;
+    height: 513px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1e1d1d;
+    overflow: hidden;
+    border-radius: 10px;
+}
 
+.drone-items::before {
+    content: '';
+    position: absolute;
+    width: 200px;
+    height: 160%;
+    background: linear-gradient(#12a0ff, #00d100);
+    animation: box 4s linear infinite;
+    display: none;
+}
 
+.drone-items:hover {
+    transition: all 0.4s;
+    background-color: rgba(0, 0, 0, 0.5);
+}
 
+.drone-items:hover::before {
+    display: block;
+}
+
+.drone-items:hover .drone-item {
+    background-color: #000;
+}
+
+.drone-items:hover .p-name {
+    color: #02E502;
+}
+
+.drone-items:hover .p-price {
+    color: #fbff00;
+}
+
+.drone-item {
+    z-index: 10;
+}
+
+@keyframes box {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
 
 
 
