--- a/css/output.css
+++ b/css/output.css
@@ -526,6 +526,10 @@ html {
   max-width: 1195px;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .relative {
   position: relative;
 }
@@ -575,6 +579,11 @@ html {
   margin-bottom: 7rem;
 }
 
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
 .my-\[90px\] {
   margin-top: 90px;
   margin-bottom: 90px;
@@ -583,11 +592,6 @@ html {
 .my-7 {
   margin-top: 1.75rem;
   margin-bottom: 1.75rem;
-}
-
-.mx-6 {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
 }
 
 .my-12 {
@@ -725,6 +729,14 @@ html {
   margin-left: 2.5rem;
 }
 
+.mt-7 {
+  margin-top: 1.75rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
 .mt-16 {
   margin-top: 4rem;
 }
@@ -751,14 +763,6 @@ html {
 
 .mt-24 {
   margin-top: 6rem;
-}
-
-.mt-7 {
-  margin-top: 1.75rem;
-}
-
-.mb-12 {
-  margin-bottom: 3rem;
 }
 
 .mb-16 {
@@ -837,6 +841,10 @@ html {
   height: auto;
 }
 
+.h-\[510px\] {
+  height: 510px;
+}
+
 .h-\[40px\] {
   height: 40px;
 }
@@ -848,22 +856,6 @@ html {
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
-}
-
-.h-\[5px\] {
-  height: 5px;
-}
-
-.h-\[550px\] {
-  height: 550px;
-}
-
-.h-\[px\] {
-  height: px;
-}
-
-.h-\[510px\] {
-  height: 510px;
 }
 
 .w-\[280px\] {
@@ -886,6 +878,14 @@ html {
   width: 14px;
 }
 
+.w-\[272px\] {
+  width: 272px;
+}
+
+.w-\[326px\] {
+  width: 326px;
+}
+
 .w-\[90\%\] {
   width: 90%;
 }
@@ -903,16 +903,8 @@ html {
   width: fit-content;
 }
 
-.w-\[3px\] {
-  width: 3px;
-}
-
-.w-\[325px\] {
-  width: 325px;
-}
-
-.w-\[326px\] {
-  width: 326px;
+.w-\[80\%\] {
+  width: 80%;
 }
 
 .max-w-full {
@@ -943,6 +935,14 @@ html {
   max-width: 214px;
 }
 
+.max-w-\[75\%\] {
+  max-width: 75%;
+}
+
+.max-w-\[373px\] {
+  max-width: 373px;
+}
+
 .max-w-\[320px\] {
   max-width: 320px;
 }
@@ -963,20 +963,8 @@ html {
   max-width: 310px;
 }
 
-.max-w-\[373px\] {
-  max-width: 373px;
-}
-
 .max-w-\[600px\] {
   max-width: 600px;
-}
-
-.max-w-\[\] {
-  max-width: ;
-}
-
-.max-w-\[75\%\] {
-  max-width: 75%;
 }
 
 .flex-auto {
@@ -995,6 +983,14 @@ html {
   flex-basis: 33%;
 }
 
+.basis-1\/2 {
+  flex-basis: 50%;
+}
+
+.basis-\[75\%\] {
+  flex-basis: 75%;
+}
+
 .basis-1\/3 {
   flex-basis: 33.333333%;
 }
@@ -1005,26 +1001,6 @@ html {
 
 .basis-\[60\%\] {
   flex-basis: 60%;
-}
-
-.basis-1\/4 {
-  flex-basis: 25%;
-}
-
-.basis-1\/2 {
-  flex-basis: 50%;
-}
-
-.basis-\[\] {
-  flex-basis: ;
-}
-
-.basis-\[75z\%\] {
-  flex-basis: 75z%;
-}
-
-.basis-\[75\%\] {
-  flex-basis: 75%;
 }
 
 .cursor-pointer {
@@ -1075,6 +1051,10 @@ html {
   gap: 1rem;
 }
 
+.gap-3 {
+  gap: 0.75rem;
+}
+
 .gap-5 {
   gap: 1.25rem;
 }
@@ -1083,16 +1063,16 @@ html {
   gap: 8rem;
 }
 
-.gap-3 {
-  gap: 0.75rem;
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
 
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .border {
@@ -1141,6 +1121,11 @@ html {
 }
 
 .bg-\[\#464646\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(70 70 70 / var(--tw-bg-opacity));
+}
+
+.bg-bgline {
   --tw-bg-opacity: 1;
   background-color: rgb(70 70 70 / var(--tw-bg-opacity));
 }
@@ -1208,6 +1193,11 @@ html {
   padding-right: 3rem;
 }
 
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .px-7 {
   padding-left: 1.75rem;
   padding-right: 1.75rem;
@@ -1223,14 +1213,19 @@ html {
   padding-right: 3.5rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
+}
+
+.py-\[18px\] {
+  padding-top: 18px;
+  padding-bottom: 18px;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .pt-7 {
@@ -1343,6 +1338,15 @@ html {
   line-height: 1.75rem;
 }
 
+.text-\[20px\] {
+  font-size: 20px;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .text-\[22px\] {
   font-size: 22px;
 }
@@ -1352,11 +1356,6 @@ html {
   line-height: 1.5rem;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
 .text-7xl {
   font-size: 4.5rem;
   line-height: 1;
@@ -1364,10 +1363,6 @@ html {
 
 .text-\[34px\] {
   font-size: 34px;
-}
-
-.text-\[20px\] {
-  font-size: 20px;
 }
 
 .font-normal {
@@ -1436,6 +1431,11 @@ html {
   color: #ffffff81;
 }
 
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
 .transition-\[0\.3s\] {
   transition-property: 0.3s;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1456,14 +1456,14 @@ html {
   transition-duration: 150ms;
 }
 
-.transition-\[0\.5s\] {
-  transition-property: 0.5s;
+.transition-\[0\.8s\] {
+  transition-property: 0.8s;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
 
-.transition-\[0\.8s\] {
-  transition-property: 0.8s;
+.transition-\[0\.5s\] {
+  transition-property: 0.5s;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1512,10 +1512,6 @@ html {
 
   .lg\:ml-4 {
     margin-left: 1rem;
-  }
-
-  .lg\:block {
-    display: block;
   }
 
   .lg\:hidden {
