--- a/css/output.css
+++ b/css/output.css
@@ -550,6 +550,14 @@ html {
   z-index: 10;
 }
 
+.z-0 {
+  z-index: 0;
+}
+
+.-z-10 {
+  z-index: -10;
+}
+
 .m-0 {
   margin: 0px;
 }
@@ -584,6 +592,11 @@ html {
   margin-right: 1.5rem;
 }
 
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .my-\[90px\] {
   margin-top: 90px;
   margin-bottom: 90px;
@@ -602,11 +615,6 @@ html {
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .mr-5 {
@@ -729,6 +737,18 @@ html {
   margin-left: 2.5rem;
 }
 
+.ml-8 {
+  margin-left: 2rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .mt-7 {
   margin-top: 1.75rem;
 }
@@ -777,16 +797,8 @@ html {
   margin-bottom: 70px;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
 .mr-7 {
   margin-right: 1.75rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
 }
 
 .mr-4 {
@@ -841,8 +853,8 @@ html {
   height: auto;
 }
 
-.h-\[510px\] {
-  height: 510px;
+.h-\[99\%\] {
+  height: 99%;
 }
 
 .h-\[40px\] {
@@ -882,8 +894,16 @@ html {
   width: 272px;
 }
 
-.w-\[326px\] {
-  width: 326px;
+.w-\[80\%\] {
+  width: 80%;
+}
+
+.w-\[32\%\] {
+  width: 32%;
+}
+
+.w-\[99\%\] {
+  width: 99%;
 }
 
 .w-\[90\%\] {
@@ -901,10 +921,6 @@ html {
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
-}
-
-.w-\[80\%\] {
-  width: 80%;
 }
 
 .max-w-full {
@@ -935,8 +951,8 @@ html {
   max-width: 214px;
 }
 
-.max-w-\[75\%\] {
-  max-width: 75%;
+.max-w-\[100\%\] {
+  max-width: 100%;
 }
 
 .max-w-\[373px\] {
@@ -983,12 +999,16 @@ html {
   flex-basis: 33%;
 }
 
+.basis-\[32\%\] {
+  flex-basis: 32%;
+}
+
 .basis-1\/2 {
   flex-basis: 50%;
 }
 
-.basis-\[75\%\] {
-  flex-basis: 75%;
+.basis-\[100\%\] {
+  flex-basis: 100%;
 }
 
 .basis-1\/3 {
@@ -1067,12 +1087,16 @@ html {
   overflow: hidden;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .border {
@@ -1130,14 +1154,18 @@ html {
   background-color: rgb(70 70 70 / var(--tw-bg-opacity));
 }
 
-.bg-bgflex {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 29 29 / var(--tw-bg-opacity));
-}
-
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-submenubg {
+  background-color: hsl(0deg 0% 4% / 90%);;
+}
+
+.bg-bgflex {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 29 29 / var(--tw-bg-opacity));
 }
 
 .bg-lightgreen {
@@ -1161,6 +1189,10 @@ html {
 
 .p-0 {
   padding: 0px;
+}
+
+.p-\[22px\] {
+  padding: 22px;
 }
 
 .py-2 {
@@ -1193,6 +1225,21 @@ html {
   padding-right: 3rem;
 }
 
+.py-\[18px\] {
+  padding-top: 18px;
+  padding-bottom: 18px;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-\[30px\] {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -1216,16 +1263,6 @@ html {
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
-}
-
-.py-\[18px\] {
-  padding-top: 18px;
-  padding-bottom: 18px;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 
 .pt-7 {
@@ -1431,11 +1468,6 @@ html {
   color: #ffffff81;
 }
 
-.outline-none {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
 .transition-\[0\.3s\] {
   transition-property: 0.3s;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1505,6 +1537,37 @@ html {
   outline-offset: 2px;
 }
 
+@media (max-width: 1250px) {
+  .xl\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  .xl\:py-1 {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+
+  .xl\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .xl\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .xl\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .xl\:leading-8 {
+    line-height: 2rem;
+  }
+}
+
 @media (max-width: 992px) {
   .lg\:mr-0 {
     margin-right: 0px;
@@ -1514,12 +1577,32 @@ html {
     margin-left: 1rem;
   }
 
+  .lg\:block {
+    display: block;
+  }
+
   .lg\:hidden {
     display: none;
   }
 
+  .lg\:max-w-\[100\%\] {
+    max-width: 100%;
+  }
+
   .lg\:max-w-\[455px\] {
     max-width: 455px;
+  }
+
+  .lg\:basis-\[100\%\] {
+    flex-basis: 100%;
+  }
+
+  .lg\:flex-col {
+    flex-direction: column;
+  }
+
+  .lg\:justify-center {
+    justify-content: center;
   }
 
   .lg\:py-0 {
@@ -1675,10 +1758,6 @@ html {
     margin-top: 1.25rem;
   }
 
-  .md\:block {
-    display: block;
-  }
-
   .md\:hidden {
     display: none;
   }
@@ -1697,6 +1776,10 @@ html {
 
   .md\:w-\[44\%\] {
     width: 44%;
+  }
+
+  .md\:w-\[48\%\] {
+    width: 48%;
   }
 
   .md\:max-w-\[338px\] {
@@ -1729,6 +1812,10 @@ html {
 
   .md\:basis-\[100\%\] {
     flex-basis: 100%;
+  }
+
+  .md\:basis-\[48\%\] {
+    flex-basis: 48%;
   }
 
   .md\:flex-col {
@@ -2000,8 +2087,24 @@ html {
     width: 7rem;
   }
 
+  .ss\:w-\[auto\] {
+    width: auto;
+  }
+
+  .ss\:w-\[70\%\] {
+    width: 70%;
+  }
+
   .ss\:basis-\[48\%\] {
     flex-basis: 48%;
+  }
+
+  .ss\:basis-\[auto\] {
+    flex-basis: auto;
+  }
+
+  .ss\:basis-\[70\%\] {
+    flex-basis: 70%;
   }
 
   .ss\:flex-col {
@@ -2226,6 +2329,10 @@ html {
     width: 7rem;
   }
 
+  .sm\:w-\[78\%\] {
+    width: 78%;
+  }
+
   .sm\:max-w-\[270px\] {
     max-width: 270px;
   }
@@ -2248,6 +2355,10 @@ html {
 
   .sm\:basis-\[48\%\] {
     flex-basis: 48%;
+  }
+
+  .sm\:basis-\[78\%\] {
+    flex-basis: 78%;
   }
 
   .sm\:justify-around {
